syntax = "proto3";

package proto;
option go_package = "./;proto";

import "ShopGoods.proto";

// CmdId: 741
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message BuyGoodsReq {
  uint32 shop_type = 15;
  ShopGoods goods = 13;
  uint32 buy_count = 6;
}
