syntax = "proto3";

package proto;
option go_package = "./;proto";


message ItemParam {
  uint32 item_id = 1;
  uint32 count = 2;
}
