syntax = "proto3";

package proto;
option go_package = "./;proto";


message McoinExchangeHcoinRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 689;
  }

  int32 retcode = 9;
  uint32 mcoin_cost = 10;
  uint32 hcoin = 15;
}
