syntax = "proto3";

package proto;
option go_package = "./;proto";

import "ShopGoods.proto";
import "ShopMcoinProduct.proto";
import "ShopCardProduct.proto";
import "ShopConcertProduct.proto";

message Shop {
  uint32 shop_type = 13;
  repeated ShopGoods goods_list = 1;
  repeated ShopMcoinProduct mcoin_product_list = 2;
  repeated ShopCardProduct card_product_list = 10;
  uint32 next_refresh_time = 6;
  uint32 city_id = 7;
  uint32 city_reputation_level = 14;
  repeated ShopConcertProduct concert_product_list = 3;
}
